<resources>
    <string name="app_name">Sneakers App</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="empty" />
    <string name="sneaker_image">sneaker image</string>

    <string name="remove_item">Remove item</string>
    <string name="quantity">Quantity</string>
    <string name="color">Color</string>
    <string name="size">Size :</string>
    <string name="size_7">7</string>
    <string name="size_8">8</string>
    <string name="size_9">9</string>
    <string name="color_text">Color :</string>
    <string name="pink_color_button">Pink Color Button</string>
    <string name="blue_color_button">Blue color button</string>
    <string name="sky_color_button">Sky Color Button</string>
    <string name="price">Price :</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="dummy_text">Title</string>
    <string name="dummy_price">$100</string>
    <string name="order_details">Order details</string>
    <string name="check_out">Check Out</string>
    <string name="popular">Popular</string>
    <string name="sort_by">Sort by</string>
    <string name="back_button">Back Button</string>
    <string name="toolbar_text">Cart</string>
    <string name="sneakership">SNEAKERSHIP</string>
    <string name="search_brand">Search Brand</string>

    // Formatted string
    <string name="currency">$ %s</string>
    <string name="sub_total">Sub Total: $%s</string>
    <string name="texts_and_charges">Taxes and Charges: $%s</string>
    <string name="total">Total: $%s</string>
    <string name="selected_size">Size: %s</string>
    <string name="oops_your_cart_is_empty">Oops! Your cart is Empty!</string>
    <string name="redirect_to_home">Redirect to Home</string>
    <string name="empty_item_image">Empty Item Image</string>

</resources>