<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="backButton"
            type="Boolean"/>
        <variable
            name="toolbarText"
            type="Boolean"/>
        <variable
            name="homeText"
            type="Boolean"/>
        <variable
            name="searchBox"
            type="Boolean"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow"
            android:layout_marginStart="24dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:visibility="@{backButton ? View.VISIBLE : View.GONE}"
            tools:visibility="gone"
            android:contentDescription="@string/back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        
        <TextView
            android:id="@+id/toolbar_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/toolbar_text"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="#DF4819"
            android:visibility="@{toolbarText ? View.VISIBLE : View.GONE}"
            tools:visibility="gone"
            android:textAlignment="center"
            android:padding="6dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/back_button"
            app:layout_constraintEnd_toEndOf="parent"/>
        
        <TextView
            android:id="@+id/home_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/sneakership"
            android:textColor="#DF4819"
            android:textSize="24sp"
            android:visibility="@{homeText ? View.VISIBLE : View.GONE}"
            android:textStyle="bold"
            android:textAlignment="center"
            android:padding="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        
        <EditText
            android:id="@+id/search_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/search_brand"
            android:layout_marginStart="16dp"
            android:maxLines="1"
            android:inputType="text"
            android:layout_marginEnd="16dp"
            android:visibility="@{searchBox ? View.VISIBLE : View.GONE}"
            android:textColor="#DF4819"
            android:drawableEnd="@drawable/baseline_search_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/home_text"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>