<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="sneaker"
            type="com.example.sneakersapp.dao.SneakerTable" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/white"
        android:minHeight="48dp"
        app:cardCornerRadius="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:minHeight="48dp">

            <ImageView
                android:id="@+id/sneaker_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/sneaker_image"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:scaleType="centerCrop"
                android:background="@drawable/carousel_item_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/vertical_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:barrierDirection="end"
                app:constraint_referenced_ids="sneaker_image"/>

            <TextView
                android:id="@+id/sneaker_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:maxLines="2"
                android:ellipsize="end"
                android:text="@{sneaker.brandName}"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/vertical_barrier"
                app:layout_constraintTop_toBottomOf="@+id/cross_button" />

            <TextView
                android:id="@+id/sneaker_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@{@string/currency(sneaker.price)}"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#2E2B2B"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/vertical_barrier"
                app:layout_constraintTop_toBottomOf="@+id/sneaker_name" />

            <ImageButton
                android:id="@+id/cross_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:contentDescription="@string/remove_item"
                android:background="@color/white"
                android:src="@drawable/cancel_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/horizontal_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="sneaker_price"/>

            <TextView
                android:id="@+id/item_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="80dp"
                android:minHeight="48dp"
                android:textSize="24sp"
                android:layout_marginTop="6dp"
                android:textStyle="bold"
                android:spinnerMode="dropdown"
                android:text="@{@string/selected_size(sneaker.size)}"
                android:textColor="#DF4819"
                app:layout_constraintTop_toBottomOf="@id/horizontal_barrier"
                app:layout_constraintStart_toStartOf="@id/vertical_barrier"/>

            <TextView
                android:id="@+id/item_color"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textColor="#DF4819"
                android:layout_marginTop="6dp"
                android:layout_marginStart="10dp"
                android:text="@string/color"
                app:layout_constraintStart_toEndOf="@+id/item_count"
                app:layout_constraintTop_toBottomOf="@id/horizontal_barrier" />

            <View
                android:id="@+id/color_box_pink"
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="4dp"
                android:visibility="@{(sneaker.color == 1) ? View.VISIBLE : View.GONE}"
                android:backgroundTint="@color/shrine_pink_100"
                android:background="@drawable/ovel_view_for_red_color_button"
                app:layout_constraintStart_toEndOf="@+id/item_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontal_barrier"/>

            <View
                android:id="@+id/color_box_blue"
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="4dp"
                android:visibility="@{(sneaker.color == 2) ? View.VISIBLE : View.GONE}"
                android:backgroundTint="@color/purple_700"
                android:background="@drawable/ovel_view_for_red_color_button"
                app:layout_constraintStart_toEndOf="@+id/item_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontal_barrier"/>

            <View
                android:id="@+id/color_sky"
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="4dp"
                android:visibility="@{(sneaker.color == 3) ? View.VISIBLE : View.GONE}"
                android:backgroundTint="@color/teal_200"
                android:background="@drawable/ovel_view_for_red_color_button"
                app:layout_constraintStart_toEndOf="@+id/item_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontal_barrier"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>